# tricade

./: Dockerfile  README.md  meson.build
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker_ci.yml  meson_ci.yml
code/: meson.build
code/logic/: app.cpp  main.cpp  meson.build
code/logic/fossil/code/: app.h
code/tests/: meson.build
code/tests/cases/: test_sample.cpp
subprojects/: fossil-io.wrap  fossil-sys.wrap
